Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

 o #16359,16360 acceptWrongSenderAddress is now configurable using JMX/jconsole
          see http://www.xmlBlaster.org/xmlBlaster/doc/requirements/admin.errorHandling.html why you could need this

 o #16339 Added jconsole/JMX support to increase on a running system the maxNumOfEntries and maxNumOfBytes
          of a map (msgUnitStore), the changes are persistently and durable after a xmlBlaster re-start.

 o #16332 fixed excessive CPU Usage due to short loops for logs in Execute (native cmd line invoker)

 o #16331 fixed hole which could generate a meat not found in postHandleNextMessages. Would only
          happen when using the I_MsgDispatchInterceptor plugin.
 
 o #16323 Added BlockingQueueWrapper: a wrapper around I_Queue to invoke blocking peeks

 o #16315 Fixed JDBC ping for MSSQLServer
          Fixed performance bottleneck when RAM part of CacheQueue is full

 o #16312 C client library avoids DNS lookup if raw ip4 address given

 o #16309 Added server timestamp (ISO, UTC, nano precision) to ConnectReturnQos:
          <clientProperty name='__rcvTimestampStr'>2007-07-09 10:36:38.189000005Z</clientProperty>

 o #16307 Extended C# client library for java like System.currentTimeMillis handling with C# DateTime

 o #16292 ClientProperties of ConnectQos can now be copied to remoteProperties, see
          See: http://www.xmlblaster.org/xmlBlaster/doc/requirements/interface.connect.html#remoteProperty

 o #16264 SocketUrl: changed the Exception to be a communication for cases where the host is temporarly 
          unavailable. If you have a positive SessionId it will go in polling (as opposed to before where 
          it went to dead)

 o #16283 Replication:
          Added property 'dbWriter.quoteColumnNames=false', set to true for DB2 host sinks (e.g. "COMMENT")

 o #16280 Replication: