@@ -1,6 +1,10 @@
 Release notes for xmlBlaster (http://www.xmlBlaster.org)
 The "#99999" numbers are Subversion revision numbers.
 
+ o #16371 C++ extension: Added xmlBlasterAccess.receive(oid, maxEntries, timeout, consumable)
+          to peek/take messages from server side queues (history, subject and callback queue)
+          see http://www.xmlBlaster.org/xmlBlaster/doc/requirements/engine.qos.queryspec.QueueQuery.html
+
  o #16359,16360 acceptWrongSenderAddress is now configurable using JMX/jconsole
           see http://www.xmlBlaster.org/xmlBlaster/doc/requirements/admin.errorHandling.html why you could need this
 
